--- a/000_5-sds-2-x-geo/index.html
+++ b/000_5-sds-2-x-geo/index.html
@@ -150,7 +150,7 @@
 </div>
 <div class="cell markdown">
 <p>This notebook series was updated from the previous one <a href="https://lamastex.github.io/scalable-data-science/sds/2/x/db/031_GeospatialAnalyticsInMagellan/">sds-2-x-dl</a>. The notebook series was updated on <em>2022-01-17</em>. See changes from previous version in table below as well as current flaws that needs revision.</p>
-<p><em>Thanks to ...</em></p>
+<p><em>Thanks to oskar... for testin this...</em></p>
 </div>
 <div class="cell markdown">
 <h2 id="table-of-changes-and-current-flaws"><a class="header" href="#table-of-changes-and-current-flaws">Table of changes and current flaws</a></h2>
