--- a/000_1-sds-3-x-sql/contents/000_1-sds-3-x-sql/007e_SparkSQLProgGuide_HW.html
+++ b/000_1-sds-3-x-sql/contents/000_1-sds-3-x-sql/007e_SparkSQLProgGuide_HW.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>007e_SparkSQLProgGuide_HW</title>
+        <title>007e_SparkSQLProgGuide_HW - sds-3.x/ScaDaMaLe</title>
 
 
         <!-- Custom HTML head -->
@@ -30,7 +30,10 @@
         <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="../../scroll-mdbook-outputs.css">
 
+        <!-- MathJax -->
+        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -110,7 +113,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title"></h1>
+                    <h1 class="menu-title">sds-3.x/ScaDaMaLe</h1>
 
                     <div class="right-buttons">
                         <a href="../../print.html" title="Print this book" aria-label="Print this book">
@@ -152,6 +155,7 @@
 <ul>
 <li><a href="https://spark.apache.org/docs/latest/sql-performance-tuning.html">https://spark.apache.org/docs/latest/sql-performance-tuning.html</a></li>
 </ul>
+<p>Normally, you only need to get into the internals of optimizing Spark when Spark's automatic optimizations fail, which can happen from time to time.</p>
 </div>
 <div class="cell code" execution_count="1" scrolled="auto">
 <div class="output execute_result html_result" execution_count="1">
