--- a/000_1-sds-3-x-sql/contents/000_1-sds-3-x-sql/007g_PivotInSQL.html
+++ b/000_1-sds-3-x-sql/contents/000_1-sds-3-x-sql/007g_PivotInSQL.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>007g_PivotInSQL</title>
+        <title>007g_PivotInSQL - sds-3.x/ScaDaMaLe</title>
 
 
         <!-- Custom HTML head -->
@@ -30,7 +30,10 @@
         <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="../../scroll-mdbook-outputs.css">
 
+        <!-- MathJax -->
+        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -110,7 +113,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title"></h1>
+                    <h1 class="menu-title">sds-3.x/ScaDaMaLe</h1>
 
                     <div class="right-buttons">
                         <a href="../../print.html" title="Print this book" aria-label="Print this book">
@@ -158,7 +161,7 @@
 <div class="cell code" execution_count="1" scrolled="false">
 <pre><code class="language-sql">CREATE OR REPLACE TEMPORARY VIEW high_temps
   USING csv
-  OPTIONS (path &quot;/databricks-datasets/weather/high_temps&quot;, header &quot;true&quot;, mode &quot;FAILFAST&quot;)
+  OPTIONS (path &quot;/datasets/sds/weather/high_temps&quot;, header &quot;true&quot;, mode &quot;FAILFAST&quot;)
 </code></pre>
 </div>
 <div class="cell code" execution_count="1" scrolled="true">
@@ -4180,7 +4183,7 @@
 <div class="cell code" execution_count="1" scrolled="false">
 <pre><code class="language-sql">CREATE OR REPLACE TEMPORARY VIEW low_temps
   USING csv
-  OPTIONS (path &quot;/databricks-datasets/weather/low_temps&quot;, header &quot;true&quot;, mode &quot;FAILFAST&quot;)
+  OPTIONS (path &quot;/datasets/sds/weather/low_temps&quot;, header &quot;true&quot;, mode &quot;FAILFAST&quot;)
 </code></pre>
 </div>
 <div class="cell code" execution_count="1" scrolled="true">
