--- a/000_1-sds-3-x-sql/editors.html
+++ b/000_1-sds-3-x-sql/editors.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>editors - sds-3.x/ScaDaMaLe</title>
+        <title>Editors - sds-3.x/ScaDaMaLe</title>
 
 
         <!-- Custom HTML head -->
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007_SparkSQLIntroBasics.html">007_SparkSQLIntroBasics</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007a_SparkSQLProgGuide_HW.html">007a_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007b_SparkSQLProgGuide_HW.html">007b_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007c_SparkSQLProgGuide_HW.html">007c_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007d_SparkSQLProgGuide_HW.html">007d_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007e_SparkSQLProgGuide_HW.html">007e_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007f_SparkSQLProgGuide_HW.html">007f_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007g_PivotInSQL.html">007g_PivotInSQL</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/008_DiamondsPipeline_01ETLEDA.html">008_DiamondsPipeline_01ETLEDA</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/009_PowerPlantPipeline_01ETLEDA.html">009_PowerPlantPipeline_01ETLEDA</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/010_wikipediaClickStream_01ETLEDA.html">010_wikipediaClickStream_01ETLEDA</a></li><li class="chapter-item expanded affix "><a href="editors.html" class="active">editors</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007_SparkSQLIntroBasics.html">007_SparkSQLIntroBasics</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007a_SparkSQLProgGuide_HW.html">007a_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007b_SparkSQLProgGuide_HW.html">007b_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007c_SparkSQLProgGuide_HW.html">007c_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007d_SparkSQLProgGuide_HW.html">007d_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007e_SparkSQLProgGuide_HW.html">007e_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007f_SparkSQLProgGuide_HW.html">007f_SparkSQLProgGuide_HW</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/007g_PivotInSQL.html">007g_PivotInSQL</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/008_DiamondsPipeline_01ETLEDA.html">008_DiamondsPipeline_01ETLEDA</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/009_PowerPlantPipeline_01ETLEDA.html">009_PowerPlantPipeline_01ETLEDA</a></li><li class="chapter-item expanded affix "><a href="contents/000_1-sds-3-x-sql/010_wikipediaClickStream_01ETLEDA.html">010_wikipediaClickStream_01ETLEDA</a></li><li class="chapter-item expanded affix "><a href="editors.html" class="active">Editors</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -146,9 +146,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="editors"><a class="header" href="#editors">Editors</a></h1>
-<p>\n
-Here is a list of the editors who have helped improve this book
-\n</p>
+<p>Here is a list of the editors who have helped improve this book</p>
 <ul>
 <li><a href="https://www.linkedin.com/in/raazesh-sainudiin-45955845/">Raazesh Sainudiin</a></li>
 <li><a href="https://github.com/kTorp">Kristoffer Torp</a></li>
