--- a/projects/editors.html
+++ b/projects/editors.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="contents/student-project-02_group-DDLOfVision/00_vqa_introduction.html">00_vqa_introduction</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-02_group-DDLOfVision/01_vqa_model_training.html">01_vqa_model_training</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-02_group-DDLOfVision/02_vqa_model_inference.html">02_vqa_model_inference</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-02_group-DDLOfVision/0y_test_mnist-pytorch.html">0y_test_mnist-pytorch</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-03_group-WikiKG90mv2/00_ingest_data.html">00_ingest_data</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-03_group-WikiKG90mv2/02_load_data.html">02_load_data</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-03_group-WikiKG90mv2/03_data_exploration.html">03_data_exploration</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-03_group-WikiKG90mv2/04Motif_search_defination_code.html">04Motif_search_defination_code</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-03_group-WikiKG90mv2/08_pagerank.html">08_pagerank</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-03_group-WikiKG90mv2/10_motif_mining_WikiKGv2.html">10_motif_mining_WikiKGv2</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-03_group-WikiKG90mv2/fetch_descriptions.html">fetch_descriptions</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-04_group-FedMLMedicalApp/00_Notebook_Presentation.html">00_Notebook_Presentation</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-04_group-FedMLMedicalApp/01_BrainTumorSegmentation_Centralized_Training.html">01_BrainTumorSegmentation_Centralized_Training</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-04_group-FedMLMedicalApp/02_Federated_Learning_BrainTumorSegmentation.html">02_Federated_Learning_BrainTumorSegmentation</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-04_group-FedMLMedicalApp/data_upload_test.html">data_upload_test</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-05_group-DistOpt/00_introduction.html">00_introduction</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-05_group-DistOpt/01_Bayesian_optimization.html">01_Bayesian_optimization</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-05_group-DistOpt/02_Gaussian_processes.html">02_Gaussian_processes</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-05_group-DistOpt/03_acquisition_functions.html">03_acquisition_functions</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-05_group-DistOpt/04_TuRBO.html">04_TuRBO</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-05_group-DistOpt/05_deep_kernel_learning.html">05_deep_kernel_learning</a></li><li class="chapter-item expanded affix "><a href="contents/student-project-05_group-DistOpt/06_our_implementation.html">06_our_implementation</a></li><li class="chapter-item expanded affix "><a href="editors.html" class="active">Editors</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="editors.html" class="active"><strong aria-hidden="true">1.</strong> Editors</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -159,9 +159,6 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="contents/student-project-05_group-DistOpt/06_our_implementation.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
-                                <i class="fa fa-angle-left"></i>
-                            </a>
 
 
                         <div style="clear: both"></div>
@@ -170,9 +167,6 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="contents/student-project-05_group-DistOpt/06_our_implementation.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
-                        <i class="fa fa-angle-left"></i>
-                    </a>
 
             </nav>
 
