first auto-commit-man

--- a/projects/print.html
+++ b/projects/print.html
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="editors.html"><strong aria-hidden="true">1.</strong> Editors</a></li></ol>
+                <ol class="chapter"><li class="spacer"></li><li class="spacer"></li><li class="spacer"></li><li class="spacer"></li><li class="chapter-item expanded "><a href="editors.html"><strong aria-hidden="true">1.</strong> Editors</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -146,7 +146,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="editors"><a class="header" href="#editors">Editors</a></h1>
+                        <div style="break-before: page; page-break-before: always;"></div><h1 id="editors"><a class="header" href="#editors">Editors</a></h1>
 <p>Here is a list of the editors who have helped improve this book</p>
 <ul>
 <li><a href="https://www.linkedin.com/in/raazesh-sainudiin-45955845/">Raazesh Sainudiin</a></li>
