--- a/projects/editors.html
+++ b/projects/editors.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="editors.html" class="active"><strong aria-hidden="true">1.</strong> Editors</a></li></ol>
+                <ol class="chapter"><li class="spacer"></li><li class="spacer"></li><li class="spacer"></li><li class="spacer"></li><li class="chapter-item expanded "><a href="editors.html" class="active"><strong aria-hidden="true">1.</strong> Editors</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
