first auto-commit-man

--- a/projects/contents/student-project-05_group-DistOpt/06_our_implementation.html
+++ b/projects/contents/student-project-05_group-DistOpt/06_our_implementation.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../contents/student-project-02_group-DDLOfVision/00_vqa_introduction.html">00_vqa_introduction</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-02_group-DDLOfVision/01_vqa_model_training.html">01_vqa_model_training</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-02_group-DDLOfVision/02_vqa_model_inference.html">02_vqa_model_inference</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-02_group-DDLOfVision/0y_test_mnist-pytorch.html">0y_test_mnist-pytorch</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-03_group-WikiKG90mv2/00_ingest_data.html">00_ingest_data</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-03_group-WikiKG90mv2/02_load_data.html">02_load_data</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-03_group-WikiKG90mv2/03_data_exploration.html">03_data_exploration</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-03_group-WikiKG90mv2/04Motif_search_defination_code.html">04Motif_search_defination_code</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-03_group-WikiKG90mv2/08_pagerank.html">08_pagerank</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-03_group-WikiKG90mv2/10_motif_mining_WikiKGv2.html">10_motif_mining_WikiKGv2</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-03_group-WikiKG90mv2/fetch_descriptions.html">fetch_descriptions</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-04_group-FedMLMedicalApp/00_Notebook_Presentation.html">00_Notebook_Presentation</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-04_group-FedMLMedicalApp/01_BrainTumorSegmentation_Centralized_Training.html">01_BrainTumorSegmentation_Centralized_Training</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-04_group-FedMLMedicalApp/02_Federated_Learning_BrainTumorSegmentation.html">02_Federated_Learning_BrainTumorSegmentation</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-04_group-FedMLMedicalApp/data_upload_test.html">data_upload_test</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-05_group-DistOpt/00_introduction.html">00_introduction</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-05_group-DistOpt/01_Bayesian_optimization.html">01_Bayesian_optimization</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-05_group-DistOpt/02_Gaussian_processes.html">02_Gaussian_processes</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-05_group-DistOpt/03_acquisition_functions.html">03_acquisition_functions</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-05_group-DistOpt/04_TuRBO.html">04_TuRBO</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-05_group-DistOpt/05_deep_kernel_learning.html">05_deep_kernel_learning</a></li><li class="chapter-item expanded affix "><a href="../../contents/student-project-05_group-DistOpt/06_our_implementation.html" class="active">06_our_implementation</a></li><li class="chapter-item expanded affix "><a href="../../editors.html">Editors</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/00_vqa_introduction.html"><strong aria-hidden="true">1.</strong> 00_vqa_introduction</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/01_vqa_model_training.html"><strong aria-hidden="true">2.</strong> 01_vqa_model_training</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/02_vqa_model_inference.html"><strong aria-hidden="true">3.</strong> 02_vqa_model_inference</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/0y_test_mnist-pytorch.html"><strong aria-hidden="true">4.</strong> 0y_test_mnist-pytorch</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><li class="part-title"></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/00_ingest_data.html"><strong aria-hidden="true">5.</strong> 00_ingest_data</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/02_load_data.html"><strong aria-hidden="true">6.</strong> 02_load_data</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/03_data_exploration.html"><strong aria-hidden="true">7.</strong> 03_data_exploration</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/04Motif_search_defination_code.html"><strong aria-hidden="true">8.</strong> 04Motif_search_defination_code</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/08_pagerank.html"><strong aria-hidden="true">9.</strong> 08_pagerank</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/10_motif_mining_WikiKGv2.html"><strong aria-hidden="true">10.</strong> 10_motif_mining_WikiKGv2</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/fetch_descriptions.html"><strong aria-hidden="true">11.</strong> fetch_descriptions</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><li class="part-title"></li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/00_Notebook_Presentation.html"><strong aria-hidden="true">12.</strong> 00_Notebook_Presentation</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/01_BrainTumorSegmentation_Centralized_Training.html"><strong aria-hidden="true">13.</strong> 01_BrainTumorSegmentation_Centralized_Training</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/02_Federated_Learning_BrainTumorSegmentation.html"><strong aria-hidden="true">14.</strong> 02_Federated_Learning_BrainTumorSegmentation</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/data_upload_test.html"><strong aria-hidden="true">15.</strong> data_upload_test</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><li class="part-title"></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/00_introduction.html"><strong aria-hidden="true">16.</strong> 00_introduction</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/01_Bayesian_optimization.html"><strong aria-hidden="true">17.</strong> 01_Bayesian_optimization</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/02_Gaussian_processes.html"><strong aria-hidden="true">18.</strong> 02_Gaussian_processes</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/03_acquisition_functions.html"><strong aria-hidden="true">19.</strong> 03_acquisition_functions</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/04_TuRBO.html"><strong aria-hidden="true">20.</strong> 04_TuRBO</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/05_deep_kernel_learning.html"><strong aria-hidden="true">21.</strong> 05_deep_kernel_learning</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/06_our_implementation.html" class="active"><strong aria-hidden="true">22.</strong> 06_our_implementation</a></li><li class="spacer"></li><li class="chapter-item expanded "><a href="../../editors.html"><strong aria-hidden="true">23.</strong> Editors</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -281,15 +281,18 @@ from scalable_gps.optimizer import ScalableOptimizer
 if __name__ == '__main__':
     objectives = [Ackley(4), Griewank(10)]
     for objective in objectives:
-        for use_dkl in [True]:
+        for use_dkl in [True, False]:
             for rep in range(1):
                 name = &quot;TurBO-DKL&quot; if use_dkl else &quot;TurBO&quot;
                 turbo_kwargs = {
                     'model': SingleTaskGP,
                 }
-                so = ScalableOptimizer(objective, num_parallel=4, turbo_kwargs={}, name=name, use_dkl=use_dkl, outer_iterations=1)
+                so = ScalableOptimizer(objective, num_parallel=4, turbo_kwargs={}, name=name, use_dkl=use_dkl, outer_iterations=2)
                 so.optimize()
 </code></pre>
+</div>
+<div class="cell markdown">
+<h1 id="we-now-define-some-plotting-utilities"><a class="header" href="#we-now-define-some-plotting-utilities">We now define some plotting utilities</a></h1>
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
 <pre><code class="language-python">import os
@@ -303,6 +306,8 @@ import numpy as np
 import pandas as pd
 from scipy.stats import sem
 
+
+# plot configuration
 
 COLORS = {
     'TurBO': 'crimson',
@@ -339,30 +344,9 @@ PLOT_LAYOUT = dict(linewidth=2, markevery=20, markersize=8, markeredgewidth=5)
 plt.rcParams['font.family'] = 'serif'
 
 
-import os
-from copy import copy
-from glob import glob
-from os.path import join
-from typing import List
-
-import matplotlib.pyplot as plt
-import numpy as np
-import pandas as pd
-from scipy.stats import sem
-
-
-plt.rcParams['font.family'] = 'serif'
-
-
-# Some constants for better aesthetics
-# '#377eb8', '#ff7f00', '#4daf4a'
-# '#f781bf', '#a65628', '#984ea3'
-# '#999999', '#e41a1c', '#dede00'
-
-
 def process_funcs_args_kwargs(input_tuple):
     '''
-    helper function for preprocessing to assure that the format of (func, args, kwargs is correct)
+    Helper function for preprocessing to assure that the format of (func, args, kwargs is correct)
     '''
     if len(input_tuple) != 3:
         raise ValueError(
@@ -383,6 +367,10 @@ def process_funcs_args_kwargs(input_tuple):
 
 
 def filter_paths(all_paths, included_names=None):
+    '''
+    Filters the provided paths by the included names, if specified.
+    Returns a tuple of the filtered paths and their names.
+    '''
     all_names = [benchmark_path.split('/')[-1]
                  for benchmark_path in all_paths]
     if included_names is not None:
@@ -456,6 +444,9 @@ def get_dataframe(paths, funcs_args_kwargs=None, idx=0):
 
 
 def get_min(df, run_name, metric, minimize=False):
+    '''
+    Make sure we only print the best values
+    '''
     if minimize:
         min_observed = np.inf
     else:
@@ -475,6 +466,9 @@ def get_min(df, run_name, metric, minimize=False):
 
 
 def compute_regret(df, run_name, regret, log=True):
+    '''
+    Compute regret depending on the function
+    '''
     if log:
         mins = df.iloc[:, 0].apply(lambda x: x)
     else:
@@ -486,7 +480,9 @@ def compute_regret(df, run_name, regret, log=True):
 def plot_optimization(data_dict, preprocessing=None, title='benchmark', xlabel='X', ylabel='Y', fix_range=None,
                       only_plot=-1, names=None, predictions=False, init=2, n_markers=20, n_std=1, show_ylabel=True,
                       maxlen=-1, plot_ax=None, first=True, show_noise=None):
-
+    '''
+    Plot all the optimization runs for the different benchmarks and optimization algorithms.
+    '''
     if plot_ax is None:
         fig, ax = plt.subplots(figsize=(25, 16))
     else:
@@ -567,6 +563,9 @@ def plot(algos: List[str], functions: List[str], experiment_name: str):
     plt.show()
 
 </code></pre>
+</div>
+<div class="cell markdown">
+<h1 id="next-we-plot-the-results"><a class="header" href="#next-we-plot-the-results">Next, we plot the results</a></h1>
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
 <pre><code class="language-python">plot([&quot;TurBO-DKL&quot;,&quot;TurBO&quot;],[&quot;Ackley-4&quot;, &quot;Griewank-10&quot;, &quot;Roverplanning&quot;], &quot;plot_name&quot;) 
