first auto-commit-man

--- a/projects/contents/student-project-05_group-DistOpt/06_our_implementation.html
+++ b/projects/contents/student-project-05_group-DistOpt/06_our_implementation.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/00_vqa_introduction.html"><strong aria-hidden="true">1.</strong> 00_vqa_introduction</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/01_vqa_model_training.html"><strong aria-hidden="true">2.</strong> 01_vqa_model_training</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/02_vqa_model_inference.html"><strong aria-hidden="true">3.</strong> 02_vqa_model_inference</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/0y_test_mnist-pytorch.html"><strong aria-hidden="true">4.</strong> 0y_test_mnist-pytorch</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><li class="part-title"></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/00_ingest_data.html"><strong aria-hidden="true">5.</strong> 00_ingest_data</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/02_load_data.html"><strong aria-hidden="true">6.</strong> 02_load_data</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/03_data_exploration.html"><strong aria-hidden="true">7.</strong> 03_data_exploration</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/04Motif_search_defination_code.html"><strong aria-hidden="true">8.</strong> 04Motif_search_defination_code</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/08_pagerank.html"><strong aria-hidden="true">9.</strong> 08_pagerank</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/10_motif_mining_WikiKGv2.html"><strong aria-hidden="true">10.</strong> 10_motif_mining_WikiKGv2</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/fetch_descriptions.html"><strong aria-hidden="true">11.</strong> fetch_descriptions</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><li class="part-title"></li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/00_Notebook_Presentation.html"><strong aria-hidden="true">12.</strong> 00_Notebook_Presentation</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/01_BrainTumorSegmentation_Centralized_Training.html"><strong aria-hidden="true">13.</strong> 01_BrainTumorSegmentation_Centralized_Training</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/02_Federated_Learning_BrainTumorSegmentation.html"><strong aria-hidden="true">14.</strong> 02_Federated_Learning_BrainTumorSegmentation</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/data_upload_test.html"><strong aria-hidden="true">15.</strong> data_upload_test</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><li class="part-title"></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/00_introduction.html"><strong aria-hidden="true">16.</strong> 00_introduction</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/01_Bayesian_optimization.html"><strong aria-hidden="true">17.</strong> 01_Bayesian_optimization</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/02_Gaussian_processes.html"><strong aria-hidden="true">18.</strong> 02_Gaussian_processes</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/03_acquisition_functions.html"><strong aria-hidden="true">19.</strong> 03_acquisition_functions</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/04_TuRBO.html"><strong aria-hidden="true">20.</strong> 04_TuRBO</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/05_deep_kernel_learning.html"><strong aria-hidden="true">21.</strong> 05_deep_kernel_learning</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/06_our_implementation.html" class="active"><strong aria-hidden="true">22.</strong> 06_our_implementation</a></li><li class="spacer"></li><li class="chapter-item expanded "><a href="../../editors.html"><strong aria-hidden="true">23.</strong> Editors</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/00_vqa_introduction.html"><strong aria-hidden="true">1.</strong> 00_vqa_introduction</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/01_vqa_model_training.html"><strong aria-hidden="true">2.</strong> 01_vqa_model_training</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/02_vqa_model_inference.html"><strong aria-hidden="true">3.</strong> 02_vqa_model_inference</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-02_group-DDLOfVision/0y_test_mnist-pytorch.html"><strong aria-hidden="true">4.</strong> 0y_test_mnist-pytorch</a></li><li class="chapter-item expanded affix "><li class="part-title">student-project-03_group-WikiKG90mv2</li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/00_ingest_data.html"><strong aria-hidden="true">5.</strong> 00_ingest_data</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/02_load_data.html"><strong aria-hidden="true">6.</strong> 02_load_data</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/03_data_exploration.html"><strong aria-hidden="true">7.</strong> 03_data_exploration</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/04Motif_search_defination_code.html"><strong aria-hidden="true">8.</strong> 04Motif_search_defination_code</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/08_pagerank.html"><strong aria-hidden="true">9.</strong> 08_pagerank</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/10_motif_mining_WikiKGv2.html"><strong aria-hidden="true">10.</strong> 10_motif_mining_WikiKGv2</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-03_group-WikiKG90mv2/fetch_descriptions.html"><strong aria-hidden="true">11.</strong> fetch_descriptions</a></li><li class="chapter-item expanded affix "><li class="part-title">student-project-04_group-FedMLMedicalApp</li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/00_Notebook_Presentation.html"><strong aria-hidden="true">12.</strong> 00_Notebook_Presentation</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/01_BrainTumorSegmentation_Centralized_Training.html"><strong aria-hidden="true">13.</strong> 01_BrainTumorSegmentation_Centralized_Training</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/02_Federated_Learning_BrainTumorSegmentation.html"><strong aria-hidden="true">14.</strong> 02_Federated_Learning_BrainTumorSegmentation</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-04_group-FedMLMedicalApp/data_upload_test.html"><strong aria-hidden="true">15.</strong> data_upload_test</a></li><li class="chapter-item expanded affix "><li class="part-title">student-project-05_group-DistOpt</li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/00_introduction.html"><strong aria-hidden="true">16.</strong> 00_introduction</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/01_Bayesian_optimization.html"><strong aria-hidden="true">17.</strong> 01_Bayesian_optimization</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/02_Gaussian_processes.html"><strong aria-hidden="true">18.</strong> 02_Gaussian_processes</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/03_acquisition_functions.html"><strong aria-hidden="true">19.</strong> 03_acquisition_functions</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/04_TuRBO.html"><strong aria-hidden="true">20.</strong> 04_TuRBO</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/05_deep_kernel_learning.html"><strong aria-hidden="true">21.</strong> 05_deep_kernel_learning</a></li><li class="chapter-item expanded "><a href="../../contents/student-project-05_group-DistOpt/06_our_implementation.html" class="active"><strong aria-hidden="true">22.</strong> 06_our_implementation</a></li><li class="chapter-item expanded "><a href="../../editors.html"><strong aria-hidden="true">23.</strong> Editors</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -273,22 +273,60 @@ class TurboState:
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
 <pre><code class="language-python">from botorch.models import SingleTaskGP
-
+import shutil
 
 from scalable_gps.objective import Ackley, Griewank, Rover
 from scalable_gps.optimizer import ScalableOptimizer
 
-if __name__ == '__main__':
-    objectives = [Ackley(4), Griewank(10)]
-    for objective in objectives:
-        for use_dkl in [True, False]:
-            for rep in range(1):
-                name = &quot;TurBO-DKL&quot; if use_dkl else &quot;TurBO&quot;
-                turbo_kwargs = {
-                    'model': SingleTaskGP,
-                }
-                so = ScalableOptimizer(objective, num_parallel=4, turbo_kwargs={}, name=name, use_dkl=use_dkl, outer_iterations=2)
-                so.optimize()
+SAVE_PATH = &quot;/dbfs/FileStore/df/&quot;
+
+try:
+    shutil.rmtree(&quot;/databricks/driver/results&quot;)
+except:
+    pass
+
+objectives = [Ackley(4), Griewank(10)]
+#objectives = [Rover(60)]
+for objective in objectives:
+    for use_dkl in [False, True]:
+        for rep in range(10):
+            print(f&quot;Repetition {rep}&quot;)
+            name = &quot;TurBO-DKL&quot; if use_dkl else &quot;TurBO&quot;
+            turbo_kwargs = {
+                'model': SingleTaskGP,
+            }
+            so = ScalableOptimizer(objective, num_parallel=4, turbo_kwargs={}, name=name, use_dkl=use_dkl, outer_iterations=5, save_path=SAVE_PATH) #&lt;--- This makes the files permanent
+            so.optimize()
+</code></pre>
+</div>
+<div class="cell code" execution_count="1" scrolled="false">
+<pre><code class="language-python">basedir = SAVE_PATH
+
+algo_benchs = {}
+
+for path, subdirs, files in os.walk(basedir):
+    for name in files:
+        bench = path.split(&quot;/&quot;)[-2]
+        algo = path.split(&quot;/&quot;)[-1]
+        y = pd.read_csv(os.path.join(path, name)).to_numpy()[:, -1]
+        y = np.array([max(y[:i]) for i in range(1,len(y)+1)])
+        if not bench in algo_benchs:
+            algo_benchs[bench] = {}
+        if not algo in algo_benchs[bench]:
+            algo_benchs[bench][algo] = []
+        algo_benchs[bench][algo].append(y)
+        
+fig, axs = plt.subplots(1, len(algo_benchs), )
+
+for i, bench in enumerate(algo_benchs.keys()):
+    ax = axs[i] if len(algo_benchs)&gt;1 else axs
+    for algo, y in algo_benchs[bench].items():
+        minlen = min([len(yy) for yy in y])
+        y = [yy[:minlen] for yy in y]
+        mean = np.mean(np.array(y), axis=0)
+        ax.plot(np.arange(len(mean)), mean, label=algo)
+    ax.set_title(bench)
+    ax.legend()
 </code></pre>
 </div>
 <div class="cell markdown">
@@ -401,7 +439,7 @@ def get_files_from_experiment(experiment_name, benchmarks=None, acquisitions=Non
     for benchmark_path, benchmark_name in zip(filtered_benchmark_paths, filtered_benchmark_names):
         paths_dict[benchmark_name] = {}
         all_acq_paths = glob(join(benchmark_path, '*'))
-        print(all_acq_paths)
+        print(join(benchmark_path, '*'))
         filtered_acq_paths, filtered_acq_names = filter_paths(
             all_acq_paths, acquisitions)
 
@@ -530,7 +568,7 @@ def plot_optimization(data_dict, preprocessing=None, title='benchmark', xlabel='
     return ax
 
 
-def plot(algos: List[str], functions: List[str], experiment_name: str):
+def plot(algos: List[str], functions: List[str], save_path: str, experiment_name: str, maxlen: int = 750):
 
     files = get_files_from_experiment(
         f'{os.getcwd()}/results', functions, algos)
@@ -550,7 +588,7 @@ def plot(algos: List[str], functions: List[str], experiment_name: str):
                           ylabel='Log Regret',
                           n_std=2,
                           preprocessing=preprocessing,
-                          maxlen=1000,
+                          maxlen=maxlen,
                           plot_ax=ax[benchmark_idx],
                           first=benchmark_idx == 0,
                           n_markers=10,
@@ -568,12 +606,12 @@ def plot(algos: List[str], functions: List[str], experiment_name: str):
 <h1 id="next-we-plot-the-results"><a class="header" href="#next-we-plot-the-results">Next, we plot the results</a></h1>
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">plot([&quot;TurBO-DKL&quot;,&quot;TurBO&quot;],[&quot;Ackley-4&quot;, &quot;Griewank-10&quot;, &quot;Roverplanning&quot;], &quot;plot_name&quot;) 
+<pre><code class="language-python">plot([&quot;TurBO-DKL&quot;],[&quot;Ackley-4&quot;], save_path=SAVE_PATH, experiment_name=&quot;plot_name&quot;, axlen=750) 
 </code></pre>
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">import os
-os.listdir(&quot;/databricks/driver/results/Ackley-4/TurBO-DKL&quot;)
+<pre><code class="language-python">import pandas as pd
+pd.read_csv(f&quot;{SAVE_PATH}/Ackley-4/TurBO-DKL/run_0.csv&quot;)
 </code></pre>
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
@@ -582,10 +620,9 @@ k = pd.read_csv(&quot;/databricks/driver/results/Ackley-4/TurBO-DKL/run_0.csv&qu
 </code></pre>
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">k
+<pre><code class="language-python">import scalable_gps
+scalable_gps.__version__
 </code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
 </div>
 
                     </main>
